dfir_rs/tests/compile-fail-stable/surface_reduce_keyed_badtype_option.stderr
error[E0271]: type mismatch resolving `<impl Pull<Item = Option<{integer}>, Meta = (), CanPend = <Iter<&mut impl Iterator<Item = Option<{integer}>>> as Pull>::CanPend, CanEnd = <Iter<&mut impl Iterator<Item = Option<{integer}>>> as Pull>::CanEnd> as Pull>::Item == (_, _)`
 --> tests/compile-fail-stable/surface_reduce_keyed_badtype_option.rs:3:9
  |
3 |         source_iter([ Some(5), None, Some(12) ])
  |         ^^^^^^^^^^^ expected `(_, _)`, found `Option<{integer}>`
4 |             -> fold_keyed(|| 0, |old: &mut u32, val: u32| { *old += val; })
  |                ---------- required by a bound introduced by this call
  |
  = note: expected tuple `(_, _)`
              found enum `std::option::Option<{integer}>`
note: required by a bound in `check_input`
 --> tests/compile-fail-stable/surface_reduce_keyed_badtype_option.rs:4:16
  |
4 |             -> fold_keyed(|| 0, |old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^ required by this bound in `check_input`

error[E0271]: type mismatch resolving `<impl Pull<Item = Option<{integer}>, Meta = (), CanPend = <Iter<&mut impl Iterator<Item = Option<{integer}>>> as Pull>::CanPend, CanEnd = <Iter<&mut impl Iterator<Item = Option<{integer}>>> as Pull>::CanEnd> as Pull>::Item == (_, _)`
 --> tests/compile-fail-stable/surface_reduce_keyed_badtype_option.rs:4:16
  |
4 |             -> fold_keyed(|| 0, |old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^ expected `(_, _)`, found `Option<{integer}>`
  |
  = note: expected tuple `(_, _)`
              found enum `std::option::Option<{integer}>`
note: required by a bound in `check_input`
 --> tests/compile-fail-stable/surface_reduce_keyed_badtype_option.rs:4:16
  |
4 |             -> fold_keyed(|| 0, |old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^ required by this bound in `check_input`
